--- a/examples/basic_inheritance/page.haml
+++ b/examples/basic_inheritance/page.haml
@@ -1,8 +1,7 @@
-<%inherit file="layout.haml" />
+%%inherit(file="layout.haml")
 
-<%def name="body()">
-%h3 I am the page name.
-%ul
-    - for x in ( 'one', 'two', 'three' ):
-        %li ${x}
-</%def>
+%%def(name="body()")
+    %h3 I am the page name.
+    %ul
+        - for x in ( 'one', 'two', 'three' ):
+            %li ${x}
